@@ -50,6 +50,7 @@ public class JdbcSeriesSalesImportDao implements SeriesSalesImportDao {
 		params.put("currency", data.getCurrency());
 		params.put("alt_price", data.getAltPrice());
 		params.put("alt_currency", data.getAltCurrency());
+		params.put("condition", data.getCondition());
 		params.put("created_at", data.getCreatedAt());
 		params.put("updated_at", data.getUpdatedAt());
 		
