@@ -10,5 +10,6 @@
 	<include file="0.4.4/2020-05-04--collections_series_condition.xml" relativeToChangelogFile="true" />
 	<include file="0.4.4/2020-05-23--modify_condition_field.xml" relativeToChangelogFile="true" />
 	<include file="0.4.4/2020-06-01--yvert_code_length.xml" relativeToChangelogFile="true" />
+	<include file="0.4.4/2020-06-03--series_sales_import_parsed_data_condition.xml" relativeToChangelogFile="true" />
 	
 </databaseChangeLog>
