@@ -160,6 +160,7 @@ INSERT \
      , currency \
      , alt_price \
      , alt_currency \
+     , cond \
      , created_at \
      , updated_at \
      ) \
@@ -173,6 +174,7 @@ VALUES \
      , :currency \
      , :alt_price \
      , :alt_currency \
+     , :condition \
      , :created_at \
      , :updated_at \
      )
@@ -186,5 +188,6 @@ SELECT seller_id \
       , currency \
       , alt_price \
       , alt_currency \
+      , cond \
  FROM series_sales_import_parsed_data \
 WHERE request_id = :request_id
